fix the view bug on firefox

--- a/src/messages/Messages.scss
+++ b/src/messages/Messages.scss
@@ -2,7 +2,6 @@
   padding-top: 56px;
   height: 100vh;
   padding-bottom: 80px;
-  overflow: hidden;
 
   .Messages {
     max-height: 100%;
